[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "babeldoc"
version = "0.1.0"
description = "A document translation tool — Fork of funstory-ai/BabelDOC"
readme = "README.md"
license = { text = "AGPL-3.0" }
requires-python = ">=3.10"
authors = [
    { name = "BabelDOC Contributors" },
]
keywords = ["pdf", "translation", "document", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]
dependencies = [
    "pdfminer.six>=20221105",
    "reportlab>=4.0.0",
    "pymupdf>=1.23.0",
    "httpx>=0.25.0",
    "tenacity>=8.2.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]

[project.scripts]
babeldoc = "babeldoc.cli:main"

[project.urls]
Homepage = "https://github.com/funstory-ai/BabelDOC"
Repository = "https://github.com/funstory-ai/BabelDOC"
Issues = "https://github.com/funstory-ai/BabelDOC/issues"
Changelog = "https://github.com/funstory-ai/BabelDOC/releases"

[tool.hatch.build.targets.wheel]
packages = ["babeldoc"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["babeldoc"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Removed --cov flags so a plain `pytest` run doesn't require pytest-cov
addopts = "-v"

[tool.coverage.run]
source = ["babeldoc"]
omit = ["tests/*"]
